Bug 676584: Use atomic instructions for iOS.  Minor cleanip. r=ted.mielczarek Modified Files: _darwin.h uxproces.c